--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -9,22 +9,33 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackLayout Grid.Row="0" Orientation="Horizontal" Spacing="10" Padding="10">
-            <Button Text="Black" Command="{Binding SetColorCommand}" CommandParameter="Black" />
-            <Button Text="Red" Command="{Binding SetColorCommand}" CommandParameter="Red" />
-            <Button Text="Green" Command="{Binding SetColorCommand}" CommandParameter="Green" />
-            <Button Text="Blue" Command="{Binding SetColorCommand}" CommandParameter="Blue" />
+        <StackLayout Grid.Row="0"
+                Orientation="Horizontal"
+                Spacing="10"
+                Padding="10">
+            <Button Text="Black"
+                    Command="{Binding SetColorCommand}"
+                    CommandParameter="#000000"/>
+            <Button Text="Red"
+                    Command="{Binding SetColorCommand}"
+                    CommandParameter="#FF0000"/>
+            <Button Text="Green"
+                    Command="{Binding SetColorCommand}"
+                    CommandParameter="#00FF00"/>
+            <Button Text="Blue"
+                    Command="{Binding SetColorCommand}"
+                    CommandParameter="#0000FF"/>
         </StackLayout>
 
         <skiasharp:SKCanvasView Grid.Row="1"
                                 x:Name="canvasView"
                                 PaintSurface="OnCanvasViewPaintSurface"
                                 EnableTouchEvents="True"
-                                Touch="OnTouch" />
+                                Touch="OnTouch"/>
     </Grid>
 
 </ContentPage>
