--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -1,7 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:LunaDraw.Pages"
+             xmlns:views="clr-namespace:LunaDraw.Views"
              xmlns:viewModels="clr-namespace:LunaDraw.Logic.ViewModels"
              xmlns:skiasharp="clr-namespace:SkiaSharp.Views.Maui.Controls;assembly=SkiaSharp.Views.Maui.Controls"
              x:DataType="viewModels:MainViewModel"
@@ -13,23 +14,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackLayout Grid.Row="0"
-                Orientation="Horizontal"
-                Spacing="10"
-                Padding="10">
-            <Button Text="Black"
-                    Command="{Binding SetColorCommand}"
-                    CommandParameter="#000000"/>
-            <Button Text="Red"
-                    Command="{Binding SetColorCommand}"
-                    CommandParameter="#FF0000"/>
-            <Button Text="Green"
-                    Command="{Binding SetColorCommand}"
-                    CommandParameter="#00FF00"/>
-            <Button Text="Blue"
-                    Command="{Binding SetColorCommand}"
-                    CommandParameter="#0000FF"/>
-        </StackLayout>
+        <views:ToolbarView Grid.Row="0" x:Name="toolbarView"/>
 
         <skiasharp:SKCanvasView Grid.Row="1"
                                 x:Name="canvasView"
