visible flyout fix

--- a/Components/FlyoutPanel.xaml
+++ b/Components/FlyoutPanel.xaml
@@ -4,9 +4,10 @@
              x:Class="LunaDraw.Components.FlyoutPanel"
              x:Name="FlyoutRoot">
   <Border x:Name="FlyoutContainer"
-          Style="{StaticResource FlyoutBorderStyle}">
-    <AbsoluteLayout>
-      <ContentPresenter Content="{Binding Source={x:Reference FlyoutRoot}, Path=FlyoutContent}"/>
-    </AbsoluteLayout>
+          Style="{StaticResource FlyoutBorderStyle}"
+          Opacity="0">
+    <!-- <AbsoluteLayout> -->
+    <ContentPresenter Content="{Binding Source={x:Reference FlyoutRoot}, Path=FlyoutContent}"/>
+    <!-- </AbsoluteLayout> -->
   </Border>
 </ContentView>
