--- a/Components/FlyoutPanel.xaml
+++ b/Components/FlyoutPanel.xaml
@@ -2,11 +2,9 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LunaDraw.Components.FlyoutPanel"
-             x:Name="FlyoutRoot"
-    Opacity="0"
-    Scale="0.9">
+             x:Name="flyoutRoot">
   <Border x:Name="FlyoutContainer"
           Style="{StaticResource FlyoutBorderStyle}">
-    <ContentPresenter Content="{Binding Source={x:Reference FlyoutRoot}, Path=FlyoutContent}"/>
+    <ContentPresenter Content="{Binding Source={x:Reference flyoutRoot}, Path=FlyoutContent}"/>
   </Border>
 </ContentView>
